ML_tests/CBC/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbc-api
spec:
  selector:
    app: cbc-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
