ML_tests/CBC/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbc-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cbc-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cbc-api
                port:
                  number: 8000
